--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
           <div class="Input__control">
             <small></small>
             <label for="bill">Bill</label>
-            <input type="number" id="bill" placeholder="0" />
+            <input type="number" min="0" id="bill" placeholder="0" />
           </div>
-          <label for="">Select Tip %</label>
-          <div class="grid__container">
+          <label for="percentage">Select Tip %</label>
+          <div class="grid__container" id="percentage">
             <button class="btn">5%</button>
             <button class="btn">10%</button>
             <button class="btn">15%</button>
@@ -28,13 +28,18 @@
             <button class="btn">50%</button>
             <div class="Input__control">
               <small class="customSmall"></small>
-              <input type="number" id="custom" placeholder="Custom" />
+              <input type="number" min="0" id="custom" placeholder="Custom" />
             </div>
           </div>
           <div class="Input__control">
             <small></small>
             <label for="number__of__people">Number of People</label>
-            <input type="number" id="number__of__people" placeholder="0" />
+            <input
+              type="number"
+              min="0"
+              id="number__of__people"
+              placeholder="0"
+            />
           </div>
         </div>
         <!-- Result container -->
