--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <label for="bill">Bill</label>
             <input type="number" min="0" id="bill" placeholder="0" />
           </div>
-          <label for="percentage">Select Tip %</label>
-          <div class="grid__container" id="percentage">
+          <label for="select">Select Tip %</label>
+          <div class="grid__container" id="select">
             <button class="btn">5%</button>
             <button class="btn">10%</button>
             <button class="btn">15%</button>
