--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
             <button class="btn">50%</button>
             <div class="Input__control">
               <small class="customSmall"></small>
-              <input type="number" min="0" id="custom" placeholder="Custom" />
+              <input
+                type="number"
+                min="0"
+                id="custom"
+                placeholder="Custom"
+              />
             </div>
           </div>
           <!-- Number of people input -->
