--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="Input__control">
             <small></small>
             <label for="bill">Bill</label>
-            <input type="number" min="0" id="bill" placeholder="0" />
+            <input maxlength="8" min="0" id="bill" placeholder="0" />
           </div>
           <!-- Tip Percentage -->
           <label>Select Tip %</label>
@@ -31,12 +31,7 @@
             <button class="btn">50%</button>
             <div class="Input__control">
               <small class="customSmall"></small>
-              <input
-                type="number"
-                min="0"
-                id="custom"
-                placeholder="Custom"
-              />
+              <input type="number" min="0" id="custom" placeholder="Custom" />
             </div>
           </div>
           <!-- Number of people input -->
