--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="Input__control">
             <small></small>
             <label for="bill">Bill</label>
-            <input class="numbers" id="bill" placeholder="0" />
+            <input id="bill" placeholder="0" />
           </div>
           <!-- Tip Percentage -->
           <label>Select Tip %</label>
